--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,44 +20,145 @@
    Example styles. Delete these.
    ========================================================================== */
 
-.lato-specimen { font-size: 1.25em; }
-.italic {font-style: italic;}
-.lato-100 {font-weight:100;}
-    .lato-100::before {content:"Weight 100";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-200 {font-weight:200;}
-    .lato-200::before {content:"Weight 200";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-300 {font-weight:300;}
-    .lato-300::before {content:"Weight 300";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-400 {font-weight:400;}
-    .lato-400::before {content:"Weight 400";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-500 {font-weight:500;}
-    .lato-500::before {content:"Weight 500";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-600 {font-weight:600;}
-    .lato-600::before {content:"Weight 600";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-700 {font-weight:700;}
-    .lato-700::before {content:"Weight 700";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-800 {font-weight:800;}
-    .lato-800::before {content:"Weight 800";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
-.lato-900 {font-weight:900;}
-    .lato-900::before {content:"Weight 900";  font-size: 0.5em; display:block; text-transform: uppercase; margin-top: 1em}
+/* --------------------------------------------------------------------------
+   Dev Labels
+   -------------------------------------------------------------------------- */
 
-.color-specimens {display:flex; list-style: none; padding: 0; flex-wrap: wrap} 
-.color-specimen { width: 100px; height: 100px; margin: 0; padding: 0;}
-    .light-yellow {background-color: var(--light-yellow)}
-    .dark-yellow {background-color: var(--dark-yellow)}
-    .light-blue {background-color: var(--light-blue)}
-    .dark-blue {background-color: var(--dark-blue)}
-    .light-green {background-color: var(--light-green)}
-    .dark-green {background-color: var(--dark-green)}
-    .light-red {background-color: var(--light-red)}
-    .dark-red {background-color: var(--dark-red)}
-    .off-black {background-color: var(--off-black)}
-    .blue-grey {background-color: var(--blue-grey)}
-    .off-white {background-color: var(--off-white)}
+.component {
+  position: relative;
+  margin: 14px;
+}
+.component::before {
+  position: absolute;
+  top: -14px;
+  left: 0;
+  display: block;
+  font-size: 0.5em;
+  background-color: black;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  color: white;
+  opacity: 0.9;
+  padding: 2px;
+}
+
+.component:hover::before {
+  opacity:0.4;
+  background-color: green
+}
+
+#App::before {
+  content: "App";
+}
+
+#NavigationView::before {
+  content: "NavigationView";
+}
+
+#InfoView::before {
+  content: "InfoView";
+}
+
+#InfoViewHeader::before {
+  content: "InfoViewHeader";
+}
+
+#RenderedDescription::before {
+  content: "RenderedDescription";
+}
+
+#PharmacyLabel::before {
+  content: "PharmacyLabel";
+}
+
+#AdviceToClient::before {
+  content: "AdviceToClient";
+}
+
+#SubTypes::before {
+  content: "SubTypes";
+}
+
+
+/* --------------------------------------------------------------------------
+   Component Styles
+   -------------------------------------------------------------------------- */
+
+#App {
+  background-color: var(--dark-blue);
+  display: flex;
+}
+
+#NavigationView {
+  background-color: #aaa;
+  width: 50%;
+}
+
+#InfoView {
+  background-color: var(--off-white);
+  width: 50%;
+}
+
+/* Info View Header------------------------------------------------ */
+
+#InfoViewHeader {
+  border-bottom: 2px solid black;
+  margin-bottom: 1em;
+  background-color: #ddd
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+/* Description  ------------------------------------------------- */
+#RenderedDescription {
+  background-color: #fafafa;
+  border-bottom: 2px solid black;
+}
+
+
+/* Label -------------------------------------------------------- */
+#PharmacyLabel {
+  padding-bottom:2em;
+}
+
+.labelDose {}
+.labelDose::after {
+  content: "dosage";
+}
+.labelFrequency {}
+.labelFrequency::after {
+  content: "frequency";
+}
+
+.label-meta {
+  padding: 1px;
+  background-color: #fff;
+  position: relative;
+
+}
+
+.label-meta::after {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  text-transform: uppercase;
+  font-size:.8em;
+  text-align: center;
+}
+
+/* Advice to Client ---------------------------------------------- */
+
+
+
+/* Sub Types ----------------------------------------------------- */
+
+
 
 
 /* ==========================================================================
-   Your Styles
+   misc 
    ========================================================================== */
 
 * {box-sizing: border-box;}
