Nicer background color, I have to stare at this

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -83,7 +83,7 @@
 /* --------------------------------------------------------------------------
    Component Styles
    -------------------------------------------------------------------------- */
-
+body {background-color: var(--light-blue);}
 #App {
   background-color: var(--dark-blue);
   display: flex;
