Makes the active checker a little bit less janky. Next up, Markdown rendering, then we're good to style!

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -89,6 +89,8 @@ body {background-color: var(--light-blue);}
 .active {
   color: red;
 }
+
+.item {cursor: pointer;}
 #App {
   background-color: var(--dark-blue);
   display: flex;
