--- a/src/css/main.css
+++ b/src/css/main.css
@@ -157,6 +157,7 @@ ul.hasItems {
   background-color: var(--dark-blue);
   padding-left: .25em;
   padding-right: .25em;
+  overflow-y: scroll;
 }
 
 
