--- a/src/css/main.css
+++ b/src/css/main.css
@@ -162,7 +162,9 @@ ul.hasItems {
   padding-left: .25em;
   padding-right: .25em;
   overflow-y: scroll;
+  -webkit-overflow-scrolling:touch;
 }
+
 
 
 
@@ -186,6 +188,7 @@ body {padding: 2em;}
   background-color: var(--off-white);
   width: 60%;
   overflow-y: scroll;
+  -webkit-overflow-scrolling:touch;
   display: flex;
   flex-direction: column;
 }
@@ -223,7 +226,7 @@ h1 {
   margin: 0;
   padding: 0;
   text-shadow: 1px 1px rgba(0,0,0,0.4);
-  font-weight: 100;
+  font-weight: 300;
   line-height: 110%;
 }
 
@@ -334,4 +337,59 @@ h1 {
 html, body {height:100%;}
 body {font-family: "Lato", sans-serif;}
 
+/* Media Queries */
+.mobile-nav {
+  background-color: var(--off-white);
+  border: none;
+  border-radius: 2px;
+  line-height: 2em;
+  padding: 0 1em;
+  text-align: center;
+  cursor: pointer;
+}
 
+button.mobile-nav:focus {
+  outline: none!important;
+}
+
+
+#App {
+  position: relative;
+}
+@media only screen and (max-width: 700px) {
+
+  #App {
+    flex-direction: column;
+  }
+
+  #InfoView { 
+    width: 100%;
+    flex: 1;
+  }
+
+  #NavigationView {
+    width: auto;
+    height: auto;
+    padding: 10px;
+  }
+  #NavigationViewContent {
+    display: none;
+  } 
+
+  #NavigationView.expanded {
+    z-index: 10;
+    flex-grow:1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  #NavigationView.expanded #NavigationViewContent {
+    display: block;
+    
+    
+  }
+
+  #InfoView {
+    flex-grow:1;
+  }
+}
