--- a/src/css/main.css
+++ b/src/css/main.css
@@ -346,6 +346,9 @@ body {font-family: "Lato", sans-serif;}
   padding: 0 1em;
   text-align: center;
   cursor: pointer;
+  display: none;
+  font-family: Lato;
+  box-shadow: 0 2px 0 rgba(0,0,0,0.2);
 }
 
 button.mobile-nav:focus {
@@ -357,6 +360,9 @@ button.mobile-nav:focus {
   position: relative;
 }
 @media only screen and (max-width: 700px) {
+  .mobile-nav {
+    display: block;
+  }
   body {
     padding: 0;
     background-color: #eee;
