some basic setup

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,3 +13,13 @@
 /* --------------------------------------------------------------------------
    Component Styles
    -------------------------------------------------------------------------- */
+body {
+  height: 100%;
+  background-color: var(--darker-purple);
+  color: #fff;
+  font-family: "Lato";
+}
+
+#App {
+  height: 100%;
+}
