initial habit tiles and styling

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,7 +1,8 @@
 :root {
 
-    --darker-purple: #3A3F5C;
-    --dark-purple: #31333B;
+    
+    --darker-purple: #31333B;
+    --dark-purple: #3A3F5C;
     --med-dark-purple: #3A3F5C;
     --med-purple: #434D7F;
 
