--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,9 +17,74 @@ body {
   height: 100%;
   background-color: var(--darker-purple);
   color: #fff;
-  font-family: "Lato";
+  font-family: "DINPro";
 }
 
 #App {
   height: 100%;
 }
+
+h2 {
+  font-weight: 300;
+}
+
+.habit-wrapper {
+  margin-bottom: 1em;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10), 0 1px 1px 0 rgba(0,0,0,0.32);
+  border-radius: 2px;
+  max-width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.habit-main-tile {
+  background-color: var(--med-purple);
+  display: flex;
+  justify-content: space-between;
+}
+
+.habit-primary-data, .emoji-box {
+  height: 120px;
+}
+
+.emoji-box {
+  background-color: var(--dark-purple);
+  width: 120px;
+}
+
+.emoji {
+  font-style: normal;
+  text-align: center;
+  display: block;
+  width: 100%;
+  font-size: 48px;
+  line-height: 120px;
+}
+
+.progress-bar {
+  background: #393A42;
+  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.20);
+  border-radius: 12px;
+  height: 24px;
+  width: 240px;
+  position: relative;
+}
+
+  .progress-bar > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+  }
+
+  .target-percentage {
+    background: #2B2C32;
+    box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.20);
+    border-radius: 12px 0 0 12px;
+  }
+
+  .actual-percentage {
+    background: linear-gradient(-180deg, #FFD334 0%, #FCC52C 100%);
+    box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.12);
+    border-radius: 12px 2px 2px 12px;
+  }
