--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,7 +31,7 @@ h2 {
 .habit-wrapper {
   margin-bottom: 1em;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10), 0 1px 1px 0 rgba(0,0,0,0.32);
-  border-radius: 2px;
+  border-radius: 4px;
   max-width: 420px;
   margin-left: auto;
   margin-right: auto;
@@ -41,6 +41,7 @@ h2 {
   background-color: var(--med-purple);
   display: flex;
   justify-content: space-between;
+  border-radius: 4px;
 }
 
 .habit-primary-data, .emoji-box {
@@ -59,6 +60,14 @@ h2 {
   width: 100%;
   font-size: 48px;
   line-height: 120px;
+}
+
+.input-percentage {
+  display: inline;
+  width: auto;
+  background:none;
+  color: #fff;
+  border: none;
 }
 
 .progress-bar {
@@ -80,11 +89,30 @@ h2 {
   .target-percentage {
     background: #2B2C32;
     box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.20);
-    border-radius: 12px 0 0 12px;
+    border-radius: 12px;
   }
 
   .actual-percentage {
-    background: linear-gradient(-180deg, #FFD334 0%, #FCC52C 100%);
     box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.12);
     border-radius: 12px 2px 2px 12px;
+  }
+
+  .status-failing .actual-percentage {
+    background: linear-gradient(-180deg, #FF6C5E 0%, #FF382C 99%);
+  }
+
+  .status-caution .actual-percentage {
+    background: linear-gradient(-180deg, #FFD334 0%, #FCC52C 100%);
+  }
+  .status-succeeding .actual-percentage, 
+  .status-overachieving .actual-percentage {
+    background: linear-gradient(-180deg, #5CE36A 0%, #42C935 100%);
+  }
+  .status-overachieving .actual-percentage {
+    border-radius: 12px 0 0 12px;
+  }
+  .percentage-overshoot {
+    background: linear-gradient(-180deg, #7CF68C 0%, #61DC56 100%);
+    box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.12);
+    border-radius: 0px 39px 39px 0;
   }
